# grassmann

./: .gitignore  README.md  dataset.py  model.py  plot_hydra_results.py  plot_results.py  pyproject.toml  run_experiment.sh  summarize_results.py  train.py  train_hydra.py
conf/: config.yaml
conf/data/: wikitext2_local.yaml
conf/model/: attention.yaml  grassmann.yaml
training_results_hydra/: comparison_table_2026-02-23_02-18-19.md  comparison_table_2026-02-23_02-26-47.md  comparison_table_2026-02-23_03-09-29.md
training_results_hydra/multirun/2026-02-23/02-15-15/: multirun.yaml
training_results_hydra/multirun/2026-02-23/02-16-39/: multirun.yaml
training_results_hydra/multirun/2026-02-23/02-18-19/: multirun.yaml
training_results_hydra/multirun/2026-02-23/02-18-19/0_attention/: results.json
training_results_hydra/multirun/2026-02-23/02-18-19/1_grassmann/: results.json
training_results_hydra/multirun/2026-02-23/02-26-47/: multirun.yaml
training_results_hydra/multirun/2026-02-23/02-26-47/0_attention/: results.json
training_results_hydra/multirun/2026-02-23/02-26-47/1_grassmann/: results.json
training_results_hydra/multirun/2026-02-23/03-09-29/: multirun.yaml
training_results_hydra/multirun/2026-02-23/03-09-29/0_attention/: results.json
training_results_hydra/multirun/2026-02-23/03-09-29/1_grassmann/: results.json
training_results_hydra/multirun/2026-02-23/14-13-53/: multirun.yaml
training_results_hydra/multirun/2026-02-23/14-13-53/0_attention/: results.json
training_results_hydra/multirun/2026-02-27/20-23-53/: multirun.yaml
(+34 files in other folders)
